--- a/SimpleTable.html
+++ b/SimpleTable.html
@@ -56,6 +56,10 @@
                 <td>10.</td>
                 <td>KalkiAvatar</td>
             </tr>
+            <tr>
+                <td>11.</td>
+                <td>Vishnu</td>
+            </tr>
         </tbody>
 
 
