--- a/tut9.html
+++ b/tut9.html
@@ -16,7 +16,7 @@
     <div style="border: 2px solid red">this is a Paragraph</div>
     <strong style="border: 2px solid red">this is a Paragraph</strong>
     <a style="border: 2px solid red">this is a Paragraph</a>
-    <a style="border: 2px solid blue">this is also a Paragraph</a>
+    <a style="border: 2px solid Orange">this is also a Paragraph</a>
     <li style="border: 2px solid green">This is Rish</li>
     <em style="border: 2px solid Yellow">This is Rish</em>
     <ul style="border: 2px solid black">This is Rish</ul>
