File are changed and are New Branch Created

--- a/tut9.html
+++ b/tut9.html
@@ -22,5 +22,6 @@
     <ul style="border: 2px solid black">This is Rish</ul>
     <ol style="border: 2px solid Grey">This is Rish</ol>
     <img src="pic.jpg" alt="None" style="border: 2px solid black;">
+    <!-- img is a inline element -->
 </body>
 </html>
