--- a/tut10.html
+++ b/tut10.html
@@ -24,6 +24,7 @@
     <span class="myClass myClass2 myClass3">second</span>
     <span class="myClass myClass2 myClass3">third</span>
     <span class="myClass myClass2 myClass3">fourth</span>
+    <span id="mainCheck" class="Relation"></span>
    
 </body>
 </html>
