File is changed

--- a/SampleTable2.html
+++ b/SampleTable2.html
@@ -53,6 +53,10 @@
                 <td>9.</td>
                 <td>Navam SiddhiDatri</td>
             </tr>
+            <tr>
+                <td>10.</td>
+                <td>Ram Navami</td>
+            </tr>
 
         </tbody>
     </table>
