tut11.html is complete

--- a/tut11.html
+++ b/tut11.html
@@ -11,7 +11,15 @@
         <p>This is paragraph</p>
     </div>
     <div class="container">
-        <p>This is another &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; paragraph</p>
+        <p>This is another &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; paragraph</p>
+        <p>paragraph is written lik this &lt;p&gt; </p>
+        <p>pound is wrtten like this <strong>&pound;</strong></p>
+        <p>Copywrite is written like this &copy;</p>
+        <p>Empty character is written like this &#8203;</p>
+
     </div>
+
+    
+    
 </body>
 </html>
