--- a/tut13.html
+++ b/tut13.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Tutorial</title>
+   
     <style>
         p{
-            color: black;
-            background-color: blueviolet;
+            color: purple;
+            background-color: seagreen !important;
         }
     </style>
+    <link rel="stylesheet" href="tut2.css">
 </head>
 <body>
     <h3>This is CSS Tutorial</h3>
