--- a/tut18.html
+++ b/tut18.html
@@ -11,7 +11,7 @@
             height: 100px;
             width: 200px;
             border-width: 4px;
-            border-color: green;
+            border-color: black;
             border-style: solid;
             border-radius: 10px;
 
