--- a/media/tut19.html
+++ b/media/tut19.html
@@ -7,9 +7,27 @@
     <title>Box Model</title>
     <style>
         .container{
-            background-color: rgb(43, 18, 185);
-            border: 4px solid rgb(204, 45, 104);
-            padding: 80px;
+            background-color: rgb(231, 230, 241);
+            border: 3px solid rgb(64, 6, 119);
+            /*padding: 80px;*/
+            /* padding-left: 10px;
+            padding-top: 10px;
+            padding-right: 30px;
+            padding-bottom: 70PX;*/
+            
+            /* We can set padding for top, bottom, left and right like this */
+             
+             /*
+            margin-top: 30px;
+            margin-bottom: 30px;
+            margin-left: 30px;
+            margin-right: 30px;*/
+            /*padding: 23px 56px 6px 78px;*/
+            padding: 34px 19px;
+            margin: 14px 10px;
+            border-radius: 23px;
+            width: 500px;
+            height: 300;
         }
 
     </style>
