--- a/HtmlCSS/SampleTable2.html
+++ b/HtmlCSS/SampleTable2.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Table -->
     <h2>Goddess Names:</h2>
-    <table border="=6">
+    <table border="6">
         <thead>
             <tr>
                 <th>S.No</th>
