Pseudo Selectors like hover active etc

--- a/HtmlCSS/tut21.html
+++ b/HtmlCSS/tut21.html
@@ -20,6 +20,8 @@
             cursor: pointer;
             font-size: 13px;
             border-radius: 4px;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-weight: bold;
         }
         a{
             text-decoration: none;
@@ -34,9 +36,18 @@
             background-color: azure;
         }
         a:visited{
-            color: rgb(63, 6, 30);
-            background-color: aqua;
+            background-color: yellow;
+            
 
+        }
+        a:active{
+            background-color: blue;
+
+        }
+        .btn:hover{
+            color: yellowgreen;
+            background-color: blueviolet;
+            border: 2px solid gray;
         }
 
     </style>
