Use position left top properties to move your header in center

--- a/HtmlCSS/tut21.html
+++ b/HtmlCSS/tut21.html
@@ -49,6 +49,9 @@
             background-color: blueviolet;
             border: 2px solid gray;
         }
+        h3{
+            position: relative; left: 250px; top: 1px;
+        }
 
     </style>
 </head>
