--- a/HtmlCSS/tut22.html
+++ b/HtmlCSS/tut22.html
@@ -8,7 +8,7 @@
     <style>
         .navbar{
             background-color: blue;
-            border-radius: 10px;
+            border-radius: 30px;
         }
         .navbar ul {
             overflow: auto;
@@ -26,6 +26,23 @@
             text-decoration: none;
             color: white;
         }
+        .search{
+            float: right;
+            color: wheat;
+            padding: 12px 75px;
+        }
+        .navbar input{
+            border: 2px solid black;
+            border-radius: 14px;
+            padding: 3px 4px;
+            width: 130px;
+        }
+        input:hover{
+            background-color: rgb(228, 202, 202);
+        }
+        .navbar li a:hover{
+           color: rebeccapurple;
+        }
 
     </style>
 </head>
@@ -37,7 +54,11 @@
                 <li><a>About</a></li>
                 <li><a>Services</a></li>
                 <li><a>Contact</a></li>
+                <div class="search">
+                    <input type="text" name="search" id="search" placeholder="Search Here!">
+                </div>
             </ul>
+            
         </nav>
     </header>
 </body>
